# twas

./: .hgignore  Cargo.toml  README.md  animal.json  animal.txt  animal.yaml  colors.json  colors.yaml  pet-names.csv  rarity.csv  rustfmt.toml  treasure.json  treasure.yaml
.github/workflows/: code-coverage.yml  unit-test-main.yml
src/: app.rs  data.rs  errors.rs  lib.rs  long-about.txt  subspec.rs
tests/: issue_4.rs  usage_tests.rs
tests/test-data/: animal.txt  animal2.txt  animal_names.csv  basic_text.txt  color.json  loot.json  quality.csv  rarity.json  single_sub.txt  words.csv
tests/test-data/testdir/: gender.json  kind.csv
tests/test-data/testdir/elf/: names.yaml
tests/test-data/testdir/human/: names.yaml
