[package]
name = "twas"
version = "0.9.1"
edition = "2021"
license = "MPL-2.0"
description = "A text substitution application for using random look-up tables to generate text in a manner similar to the Mad Libs game."
repository = "https://github.com/DrPlantabyte/twas.git"
homepage = "https://github.com/DrPlantabyte/twas.git"
readme = "README.md"
documentation = "https://docs.rs/twas/"
keywords = ["mad-lib", "text", "substitution", "random"]
categories = ["text-processing"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general deps
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.13"
log = "0.4"
rand = "0.8.5"
tempfile = "3"
regex="1.9"
# file formats
zip = "0.6"
csv = "1.3"
utf8-chars = "3.0.1"
serde_yaml = "0.9"
# dice expression suport
dicexp = "1.1.1"
# CLI deps
clap = {optional = true,  version = "4.3", features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "unicode", "wrap_help"] }

[features]
app = ["clap"]

[lib]
name = "twas"
path = "src/lib.rs"

[[bin]]
name = "twas"
path = "src/app.rs"
required-features = ["app"]
