[package]
name = "twas"
version = "1.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A text substitution application for using random look-up tables to generate text in a manner similar to the Mad Libs game."
repository = "https://github.com/DrPlantabyte/twas.git"
homepage = "https://github.com/DrPlantabyte/twas.git"
readme = "README.md"
documentation = "https://docs.rs/twas/"
keywords = ["mad-lib", "text", "substitution", "random"]
categories = ["text-processing"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general deps
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.25"
log = "0.4"
rand = "0.10"
tempfile = "3.26"
regex="1.12"
# file formats
zip = "8.1"
csv = "1.4"
utf8-chars = "3.0.6"
serde_yaml_neo = "0.11.0"
serde_json = "1"
# dice expression suport
dicexp = "1.3.0"
# CLI deps
clap = {optional = true,  version = "4.5", features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "unicode", "wrap_help"] }

[features]
app = ["clap"]

[lib]
name = "twas"
path = "src/lib.rs"

[[bin]]
name = "twas"
path = "src/app.rs"
required-features = ["app"]
